--- a/style.css
+++ b/style.css
@@ -63,6 +63,12 @@ ul.nav-link{
 .fh-2{
     line-height: 1.6rem;
 }
+#gohome{
+    color: #000;
+}
+#gohome:hover{
+    text-decoration: underline;
+}
 ul.nav-link li{
     display: inline-block;
     margin: 0 10px;
@@ -172,5 +178,48 @@ h1.lg-text{
     }
     .center-text{
         height: 75%;
+    }
+}
+@media screen and (max-width: 1200px) {
+    body{
+        padding: 0 5em;
+    }
+    .project-container{
+        display: grid;
+        grid-template-columns: repeat(2, 50%);
+        padding-top: 3rem;
+        gap: 10px;
+    }
+    .p-60-100{
+        padding-top: 150px;
+        padding-bottom: 100px;
+    }
+    h1.lg-text{
+        font-size: 3rem;
+        filter: contrast(0%);
+    }
+    .w-70{
+        width: unset;
+    }
+}
+@media screen and (max-width:600px) {
+    body{
+        padding: 0 1rem;
+    }
+    .w-70{
+        width: unset;
+    }
+    #text{
+        font-size: 1.5rem;
+    }
+    .project-container{
+        display: grid;
+        grid-template-columns: repeat(1, 100%);
+        padding-top: 3rem;
+        gap: 10px;
+    }
+    h1.lg-text{
+        font-size: 3rem;
+        filter: contrast(0%);
     }
 }
